(fix) alignment

--- a/css/index.css
+++ b/css/index.css
@@ -291,7 +291,7 @@ h1, .page-title {
 
 img.logo {
   margin-right: 10px;
-  vertical-align: -30%;
+  vertical-align: middle;
 }
 
 .divider {
